Set footer to position: fixed, and fix editor overflowing under the footer

--- a/sass/_design.scss
+++ b/sass/_design.scss
@@ -24,7 +24,7 @@ html, body {
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 
